# itunes-artwork-finder-old

./: .gitignore  README.md  main.py  new.diff  pyproject.toml
itunes_artwork_finder/: __init__.py  __main__.py  core.py
tests/: test_basic.py
