[build-system]
requires = ["setuptools>=61"]
build-backend = "setuptools.build_meta"

[project]
name = "itunes-artwork-finder"
version = "0.1.0"
description = "Python library for retrieving iTunes artwork"
authors = [{name = "Ben Dodson"}]
readme = "README.md"
license = {text = "Unlicense"}
requires-python = ">=3.8"
dependencies = ["requests"]

[project.urls]
Homepage = "https://github.com/bendodson/itunes-artwork-finder"

[project.scripts]
itunes-artwork-finder = "itunes_artwork_finder.__main__:main"
